# ctgu-wutong

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/cv_gpu/: families.parquet  feature_importance.csv  manifest.json  train_fit_metrics.csv
artifacts/test_unlabeled_gpu/: edges.parquet  families.parquet  feature_importance.csv  manifest.json  train_fit_metrics.csv
artifacts/train_for_ui/model/: feature_importance.csv  lgbm_model.txt  model_meta.json
artifacts/train_for_ui/test_unlabeled/: edges.parquet  families.parquet  family_profile.parquet  manifest.json
artifacts/train_for_ui/train/: edges.parquet  families.parquet  family_profile.parquet  manifest.json
artifacts/train_for_ui/valid_unlabeled/: families.parquet  manifest.json
artifacts/valid_unlabeled/: feature_importance.csv  train_fit_metrics.csv
artifacts/valid_unlabeled_gpu/: cv_metrics.json  feature_importance.csv  train_fit_metrics.csv
artifacts/valid_unlabeled_gpu2/: families.parquet  feature_importance.csv  train_fit_metrics.csv
artifacts/valid_unlabeled_gpu3/: families.parquet  family_profile.parquet  feature_importance.csv  train_fit_metrics.csv
src/wutong_family/: __init__.py  export.py  io.py  model.py  pairs.py
src/wutong_family.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
web/: .gitignore  app.js  index.html  local_dev_server.js  package.json  vercel.json
web/api/: ai.js
web/data/: cv_metrics.json  manifest.json  manifests.json
